添加favicon,修改赞助,修改geoos文字大小

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Geoos
+title: GeoOS
 subtitle: "Rust Programming Language Tutorials"
 description: "Rust Programming Language Tutorials"
 author: spatial-go
